--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,19 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.kapt' version '1.6.10' apply false
+}
+
+ext {
+    appCompatVersion = '1.6.0'
+    constraintLayoutVersion = '2.1.4'
+    fragmentVersion = "1.5.5"
+    lifecycleVersion = '2.5.1'
+    materialVersion = '1.8.0'
+    roomVersion = '2.5.0'
+    // testing
+    junitVersion = '4.13.2'
+    mockitoVersion = '5.1.1'
+    androidxJunitVersion = '1.1.5'
+    espressoVersion = '3.5.1'
 }
