--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.projettupreferes">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".database.TuPreferesApplication"
         android:allowBackup="true"
@@ -13,9 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetTuPreferes"
         tools:targetApi="31">
-        <activity
-            android:name=".activities.NormalGameActivity"
-            android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
