--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 
 dependencies {
 
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
     implementation "com.google.android.material:material:$rootProject.materialVersion"
