--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     //Room database
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
