--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
 
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
